--- a/.github/workflows/release_production.yml
+++ b/.github/workflows/release_production.yml
@@ -49,6 +49,7 @@ jobs:
           CA_CRT: ${{ secrets.CA_CRT }}
           SERVICEACCOUNT_TOKEN: ${{ secrets.SERVICEACCOUNT_TOKEN }}
           KUBE_SERVER: ${{ secrets.KUBE_SERVER }}
+          DOCKERHUB_ORGANISATION: ${{ secrets.DOCKERHUB_ORGANISATION }}
 
   send_slack_notification:
     name: Send Slack Notification
