--- a/.github/actions/versioning/action.yml
+++ b/.github/actions/versioning/action.yml
@@ -5,9 +5,12 @@ inputs:
     description: Release Type
     required: false
     default: staging
+  RELEASE_TAG:
+    description: Release Tag
+    required: true
 runs:
   using: composite
   steps:
     - name: Tag build
-      run: echo "${{ inputs.RELEASE_TYPE }} $(date -u +'%Y-%m-%dT%H:%M:%SZ')" > build/version
+      run: echo "${{ inputs.RELEASE_TYPE }}--GITHUB_REF:${{ inputs.RELEASE_TAG }}--DATE:$(date -u +'%Y-%m-%dT%H:%M:%SZ')" > build/version.txt
       shell: bash
