--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "swiper": "^8.3.2",
+    "trackjs": "^3.10.4",
     "ts-jest": "^29.0.3",
     "usehooks-ts": "^2.9.1",
     "yup": "^0.32.11"
