--- a/.github/workflows/release_test.yml
+++ b/.github/workflows/release_test.yml
@@ -40,3 +40,4 @@ jobs:
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CF_BRANCH: test
+          PROJECT_NAME: deriv-developers-portal-test-pages
