--- a/.github/workflows/release_staging.yml
+++ b/.github/workflows/release_staging.yml
@@ -32,6 +32,7 @@ jobs:
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CF_BRANCH: staging
+          PROJECT_NAME: deriv-developers-portal-pages
       - name: Publish to Docker
         uses: ./.github/actions/publish_to_docker
         with:
