--- a/.github/workflows/release_test.yml
+++ b/.github/workflows/release_test.yml
@@ -39,5 +39,5 @@ jobs:
         with:
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CF_BRANCH: test
+          CF_BRANCH: main
           PROJECT_NAME: deriv-developers-portal-test-pages
