--- a/.github/actions/deploy_to_kubernetes/action.yml
+++ b/.github/actions/deploy_to_kubernetes/action.yml
@@ -23,20 +23,18 @@ inputs:
 runs:
   using: composite
   steps:
-    - name: Setup Environment variables
-      run: |
-        echo "NAMESPACE=${{ inputs.K8S_NAMESPACE }}" >> "$GITHUB_ENV"
-        echo "KUBE_SERVER=${{ inputs.KUBE_SERVER }}" >> "$GITHUB_ENV"
-        echo "SERVICEACCOUNT_TOKEN=${{ inputs.SERVICEACCOUNT_TOKEN }}" >> "$GITHUB_ENV"
-        echo "DOCKERHUB_ORGANISATION=${{ inputs.DOCKERHUB_ORGANISATION }}" >> "$GITHUB_ENV"
-        echo "CA_CRT=${{ inputs.CA_CRT }}" >> "$GITHUB_ENV"
-        echo "APP_NAME=deriv-com-api" >> "$GITHUB_ENV"
-      shell: bash
     - name: Deploying to k8s cluster for service ${{ inputs.K8S_NAMESPACE }} 🚀
+      env:
+        NAMESPACE: ${{ inputs.K8S_NAMESPACE }}
+        KUBE_SERVER: ${{ inputs.KUBE_SERVER }}
+        SERVICEACCOUNT_TOKEN: ${{ inputs.SERVICEACCOUNT_TOKEN }}
+        DOCKERHUB_ORGANISATION: ${{ inputs.DOCKERHUB_ORGANISATION }}
+        CA_CRT: ${{ inputs.CA_CRT }}
+        APP_NAME: deriv-com-api
       run: |
         git clone https://github.com/binary-com/devops-ci-scripts
         cd devops-ci-scripts/k8s-build_tools
-        echo ${{ inputs.CA_CRT }} | base64 --decode > ca.crt
+        echo $CA_CRT | base64 --decode > ca.crt
         export CA="ca.crt"
-        ./release.sh ${APP_NAME} ${{ inputs.K8S_VERSION }}
+        ./release.sh ${APP_NAME} $K8S_VERSION
       shell: bash
