chore: added missing variable

--- a/.github/actions/deploy_to_kubernetes/action.yml
+++ b/.github/actions/deploy_to_kubernetes/action.yml
@@ -31,10 +31,11 @@ runs:
         DOCKERHUB_ORGANISATION: ${{ inputs.DOCKERHUB_ORGANISATION }}
         CA_CRT: ${{ inputs.CA_CRT }}
         APP_NAME: deriv-com-api
+        K8S_VERSION: {{ inputs.K8S_VERSION }}
       run: |
         git clone https://github.com/binary-com/devops-ci-scripts
         cd devops-ci-scripts/k8s-build_tools
         echo $CA_CRT | base64 --decode > ca.crt
         export CA="ca.crt"
-        ./release.sh ${APP_NAME} $K8S_VERSION
+        ./release.sh $APP_NAME $K8S_VERSION
       shell: bash
