--- a/.github/actions/deploy_to_kubernetes/action.yml
+++ b/.github/actions/deploy_to_kubernetes/action.yml
@@ -37,5 +37,5 @@ runs:
         cd devops-ci-scripts/k8s-build_tools
         echo $CA_CRT | base64 --decode > ca.crt
         export CA="ca.crt"
-        ./release.sh $APP_NAME $K8S_VERSION
+        ./release.sh ${APP_NAME} $K8S_VERSION
       shell: bash
