chore: updated vars on prod workflow

--- a/.github/workflows/release_production.yml
+++ b/.github/workflows/release_production.yml
@@ -57,11 +57,13 @@ jobs:
         uses: technote-space/workflow-conclusion-action@45ce8e0eb155657ab8ccf346ade734257fd196a5
       - name: Create Slack Message
         id: create_slack_message
+        env:
+          WORKFLOW_CONCLUSION: ${{ env.WORKFLOW_CONCLUSION }}
         run: |
-          if [ "${{ env.WORKFLOW_CONCLUSION }}" == "success" ]; then
-            echo "MESSAGE=${{ env.RELEASE_TYPE }} Release succeeded for api.deriv.com with version *${{ needs.build_and_publish.outputs.RELEASE_VERSION }}*" >> $GITHUB_OUTPUT
+          if [ "$WORKFLOW_CONCLUSION" == "success" ]; then
+            echo "MESSAGE=$RELEASE_TYPE Release succeeded for api.deriv.com with version *${{ needs.build_and_publish.outputs.RELEASE_VERSION }}*" >> $GITHUB_OUTPUT
           else
-            echo "MESSAGE=${{ env.RELEASE_TYPE }} Release failed for api.deriv.com with version *${{ needs.build_and_publish.outputs.RELEASE_VERSION }}*" >> $GITHUB_OUTPUT
+            echo "MESSAGE=$RELEASE_TYPE Release failed for api.deriv.com with version *${{ needs.build_and_publish.outputs.RELEASE_VERSION }}*" >> $GITHUB_OUTPUT
           fi
       - name: Send Slack Notification
         uses: ./.github/actions/notify_slack
