--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@deriv/deriv-api": "^1.0.11",
     "@deriv/quill-design": "^1.2.18",
+    "@deriv/quill-icons": "^1.21.3",
     "@deriv/ui": "^0.1.0",
     "@docusaurus/core": "^2.4.0",
     "@docusaurus/plugin-client-redirects": "^2.4.0",
@@ -33,6 +34,7 @@
     "@mdx-js/react": "^1.6.22",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@radix-ui/react-tabs": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@react-spring/web": "^9.7.3",
     "@testing-library/react-hooks": "^8.0.1",
     "@use-gesture/react": "^10.3.0",
