--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@easyops-cn/docusaurus-search-local": "^0.35.0",
     "@hookform/resolvers": "^2.9.10",
     "@mdx-js/react": "^1.6.22",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@radix-ui/react-tabs": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
