chore: update token param

--- a/.github/workflows/translation_pull.yml
+++ b/.github/workflows/translation_pull.yml
@@ -8,6 +8,7 @@ permissions: write-all
 jobs:
   crowdin:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
@@ -24,6 +25,6 @@ jobs:
           pull_request_body: 'New Crowdin pull request with translations'
           pull_request_base_branch_name: 'master'
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.SERVICEACCOUNT_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID }}
           CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
