--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,4 +1,4 @@
-project_id: 'CROWDIN_PROJECT_ID'
+project_id: 585007
 api_token: 'CROWDIN_PERSONAL_TOKEN'
 base_path: '.'
 base_url: 'https://api.crowdin.com'
